--- a/tarea/build.gradle
+++ b/tarea/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.5'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'org.flywaydb.flyway' version '9.19.1'
 }
 
 group = 'com.lab2'
@@ -37,4 +38,12 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+flyway {
+	url = 'jdbc:postgresql://localhost:5432/postgres'   // your DB URL
+	user = 'postgres'                                   // your DB user
+	password = 'localdatabase123'                       // your DB password
+	schemas = ['public']
+	locations = ['classpath:db/migration']
 }
